sol/2010-p1-f1-times.txt
Times
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 1.0 GB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2010f1p1_times.cpp: In function ‘int main()’:
2010f1p1_times.cpp:40:14: error: ‘sort’ is not a member of ‘std’
   40 |         std::sort(time.begin(), time.end());
      |              ^~~~